# CSL

./: .gitignore  .gitmodules  .travis.yml  Algebra.h  AlgebraFunctions.h  BuildingBlocks.h  BuiltInFunctions.h  CMakeLists.txt  Context.h  ExpressionsTest.h  FunctionHelpers.h  HelperClasses.h  LICENSE  Layouts.h  MatrixTypesTest.h  Operators.h  README.md  Samplers.h  Shaders.h  StringHelpers.h  StructHelpers.h  Swizzles.h  TypesHelpers.h  main.cpp
.github/workflows/: cmake.yml
boost/: headers_used.txt
include/csl/: AlgebraTypes.hpp  Controllers.hpp  Functions.hpp  InstructionTree.hpp  Listeners.hpp  NamedObjects.hpp  Operators.hpp  Preprocessor.hpp  Qualifiers.hpp  Samplers.hpp  SpirvOperators.hpp  Structs.hpp  Swizzles.hpp  TemplateHelpers.hpp  Types.hpp  csl.hpp
include/csl/glsl/: BuiltIns.hpp  Qualifiers.hpp  Shaders.hpp  ToGLSL.hpp  Types.hpp
include/csl/imgui/: ToImGui.hpp
shader_suite/: CMakeLists.txt  blur.h  frags.cpp  frags.h  geoms.cpp  geoms.h  main.cpp  pico_gl.hpp  tests.cpp  tests.h  verts.cpp  verts.h
shader_suite/shaders/: dolphin.cpp  dolphin.h  readme_examples.cpp  readme_examples.h  rendering.cpp  rendering.h  rendu.cpp  rendu.h  shadertoy.cpp  shadertoy.h
src/csl/: BuiltInFunctions.h  BuiltInFunctions.hpp  Controllers.hpp  Core.hpp  Expressions.hpp  ExpressionsTest.h  FunctionHelpers.h  FunctionHelpers.hpp  InstructionTree.hpp  Layouts.h  Layouts.hpp  Listener.hpp  Matrix.hpp  MatrixTypesTest.h  NamedObjects.hpp  Operators.h  Operators.hpp  Preprocessor.hpp  Samplers.h  Samplers.hpp  Shaders.h  Shaders.hpp  StringHelpers.h  StringHelpers.hpp  StructHelpers.h  StructHelpers.hpp  Swizzles.h  Swizzles.hpp  TypesHelpers.h  TypesHelpers.hpp
src/include/: AlgebraTypes.hpp  Controllers.hpp  Functions.hpp  InstructionTree.hpp  Listeners.hpp  NamedObjects.hpp  Operators.hpp  Preprocessor.hpp  Qualifiers.hpp  Samplers.hpp  SpirvOperators.hpp  Structs.hpp  Swizzles.hpp  TemplateHelpers.hpp  ToDebug.hpp  Types.hpp  csl.hpp
src/include/glsl/: BuiltIns.hpp  Qualifiers.hpp  Shaders.hpp  ToGLSL.hpp  Types.hpp
src/include/imgui/: ToImGui.hpp
src/shader_suite/: CMakeLists.txt  ToImGui.hpp  frags.cpp  frags.h  geoms.cpp  main.cpp  pico_gl.hpp  tests.cpp  tests.h  tests.hpp  to_imgui.hpp  verts.cpp  verts.h
src/shader_suite/extlibs/glad/include/glad/: glad.h
src/shader_suite/extlibs/glad/src/: glad.c
src/shader_suite/shaders/: 80_s_shader.cpp  80_s_shader.h  dolphin.cpp  dolphin.h  examples.cpp  examples.h  kosua_compilation.cpp  kosua_compilation.h  ogl4_sl_cookbook.cpp  ogl4_sl_cookbook.h  readme_examples.cpp  readme_examples.h  rendering.cpp  rendering.h  rendu.cpp  rendu.h  rendu_compilation.cpp  shadertoy.cpp  shadertoy.h
src/v2/: AlgebraTypes.hpp  Controllers.hpp  Debug.hpp  Functions.hpp  InstructionTree.hpp  Listeners.hpp  NamedObjects.hpp  Operators.hpp  Preprocessor.hpp  Qualifiers.hpp  Samplers.hpp  ShaderTree.hpp  SpirvOperators.hpp  Structs.hpp  Swizzles.hpp  TemplateHelpers.hpp  ToDebug.hpp  ToGLSL.hpp  Types.hpp
src/v2/glsl/: BuiltIns.hpp  Qualifiers.hpp  Shaders.hpp  ToGLSL.hpp  Types.hpp
